tests/valid_pascal_programs/concat_two_strings.pas
program ConcatStrings;
begin
  writeln ('Hello ' + 'world!');
end.

