tests/invalid_pascal_programs/without_end.pas
program InvalidExample;
begin
  writeln ('Hello world!');
